--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,7 @@ flask-cors==6.0.1
 flatbuffers==25.2.10
 frozenlist==1.7.0
 fsspec==2025.7.0
+fuzzywuzzy==0.18.0
 google-ai-generativelanguage==0.6.18
 google-api-core==2.25.1
 google-auth==2.40.3
@@ -72,6 +73,7 @@ langchain-openai==0.3.28
 langchain-text-splitters==0.3.8
 langsmith==0.4.5
 lazy_loader==0.4
+Levenshtein==0.27.1
 lxml==6.0.0
 Mako==1.3.10
 Markdown==3.8.2
@@ -128,14 +130,17 @@ PyPDF2==3.0.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
+pyspellchecker==0.8.3
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
 python-dotenv==1.1.1
+python-Levenshtein==0.27.1
 python-multipart==0.0.20
 python-pptx==1.0.2
 pytz==2025.2
 PyYAML==6.0.2
+RapidFuzz==3.13.0
 regex==2024.11.6
 requests==2.32.4
 requests-oauthlib==2.0.0
